hphp/hack/test/typecheck/constraints/where_on_function_callsite.php.like_types.exp
File "where_on_function_callsite.php", line 11, characters 8-10:
A 'where' type constraint is violated here (Typing[4110])
File "where_on_function_callsite.php", line 4, characters 10-12:
This is the method with 'where' type constraints
File "where_on_function_callsite.php", line 4, characters 14-14:
Some type constraint(s) are violated here
File "where_on_function_callsite.php", line 4, characters 14-14:
T is a constrained type parameter
File "where_on_function_callsite.php", line 4, characters 40-42:
Expected int
File "where_on_function_callsite.php", line 4, characters 14-14:
But got dynamic
